reworked Paths, CSV, and Indexes